# mcp-daemon

./: .gitignore  ARCHITECTURE.md  BINARIES.md  Cargo.toml  FLOW.md  PROTOCOL.md  README.md  RELEASE.md  TESTING.md  TRANSPORT.md  WASM.md
benches/: benchmarks.rs
docs/: README.md
src/: client.rs  lib.rs  protocol.rs  registry.rs  types.rs
src/bridge/: mod.rs  ollama.rs  openai.rs
src/completable/: mod.rs
src/server/: mcp.rs  mod.rs
src/server/completion/: mod.rs
src/server/error/: mod.rs
src/server/notifications/: mod.rs
src/server/prompt/: mod.rs
src/server/requests/: mod.rs
src/server/resource/: mod.rs
src/server/roots/: mod.rs
src/server/sampling/: mod.rs
src/server/tool/: mod.rs
src/sse/: http_server.rs  middleware.rs  mod.rs
src/transport/: error.rs  http_transport.rs  inmemory_transport.rs  mod.rs  sse_transport.rs  stdio_transport.rs  ws_transport.rs
