[package]
name = "mcp_daemon"
version = "0.2.0"
edition = "2021"
description = "Diverged Implementation of Model Context Protocol (MCP) with Extended Functionality"
rust-version = "1.70"  # Specify the minimum supported Rust version
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
exclude = [
    "benches/*",
    ".gitignore",
    ".cline/*",
]
repository = "https://github.com/entrepeneur4lyf/mcp-daemon"
license = "Apache-2.0"
authors = ["Shawn McAllister - https://github.com/entrepeneur4lyf", "Original author: https://github.com/v3g42"]
documentation = "https://github.com/entrepeneur4lyf/mcp-daemon#readme"
homepage = "https://github.com/entrepeneur4lyf/mcp-daemon"
keywords = ["async", "mcp", "protocol", "daemon", "extended"]
categories = ["asynchronous", "network-programming", "ai-tools"]
readme = "README.md"
[dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
url = { version = "2.5", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
actix-web = { version = "4", features = ["rustls"] }
tokio-stream = "0.1"
futures = "0.3"
jsonwebtoken = "8.1"
uuid = { version = "1.0", features = ["v4"] }
actix-ws = "0.2.5"
actix-web-lab = "0.20"
actix-cors = "0.6"
rustls = "0.20"
rustls-pemfile = "1.0"
bytes = "1.5"
bytestring = "1.3"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
async-openai = { version = "0.19.0", features = ["native-tls"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tracing-subscriber = "0.3"

[[bench]]
name = "benchmarks"
harness = false
